examples/neg/issue373/wrong_type_argument.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try { println(eff.op[Bool]("hello")) } // ERROR Expected Bool but got Int
  with eff: Eff[Int] { def op(x) = resume(x / 1) }
